Welcome to Justify framework v0.1g! Deleted Twig for framework optimisation

--- a/framework/core/composer/composer.json
+++ b/framework/core/composer/composer.json
@@ -1,6 +1,5 @@
 {
   "require": {
-    "gabordemooij/redbean": "dev-master",
-    "twig/twig": "^2.4"
+    "gabordemooij/redbean": "dev-master"
   }
 }
