--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,12 @@
     }
   ],
   "require": {
-    "php": "5.6 - 7.2",
-    "gabordemooij/redbean": "^5.0",
+    "php": "7.0 - 7.2",
     "swiftmailer/swiftmailer": "^6.0",
     "symfony/var-dumper": "^3.4",
-    "robmorgan/phinx": "^0.9.2"
+    "robmorgan/phinx": "^0.9.2",
+    "twig/twig": "^2.5",
+    "smarty/smarty": "^3.1"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.2",
