--- a/.htaccess
+++ b/.htaccess
@@ -2,6 +2,6 @@ AddDefaultCharset UTF-8
 
 RewriteEngine On
 RewriteCond %{REQUEST_URI} !^/?public/
-RewriteCond %{REQUEST_URI} !\.(js|css|html)$
+RewriteCond %{REQUEST_URI} !\.(js|css|html|ttf)$
 
 RewriteRule ^ public/index.php
