--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,7 @@
 {
   "name": "justify/justifyframe",
   "description": "Simple, lightweight framework",
-  "keywords": [
-    "framework",
-    "justify"
-  ],
+  "keywords": ["framework", "justify"],
   "homepage": "https://github.com/Cannon431/Justify-framework",
   "license": "MIT",
   "type": "project",
@@ -16,13 +13,14 @@
     }
   ],
   "require": {
-    "php": "7.0 - 7.2",
+    "php": "^7.0",
     "swiftmailer/swiftmailer": "^6.0",
     "symfony/var-dumper": "^3.4",
     "robmorgan/phinx": "^0.9.2",
     "twig/twig": "^2.5",
     "smarty/smarty": "^3.1",
-    "monolog/monolog": "^1.24"
+    "monolog/monolog": "^1.24",
+    "psr/cache": "^1.0"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.2",
@@ -35,6 +33,8 @@
       "App\\": "app",
       "Core\\": "core"
     },
-    "files": ["core/Components/helpers.php"]
+    "files": [
+      "core/Components/functions.php"
+    ]
   }
 }
