--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     "twig/twig": "^2.5",
     "smarty/smarty": "^3.1",
     "monolog/monolog": "^1.24",
-    "psr/cache": "^1.0"
+    "psr/cache": "^1.0",
+    "predis/predis": "^1.1"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.2",
