--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
     "smarty/smarty": "^3.1",
     "monolog/monolog": "^1.24",
     "psr/cache": "^1.0",
-    "predis/predis": "^1.1"
+    "predis/predis": "^1.1",
+    "symfony/http-foundation": "^4.2",
+    "nesbot/carbon": "^2.16"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.2",
